# nix-tmux-define

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  flake.nix  module.nix
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  dev.json  monitoring.yaml  simple.toml
src/: attach.rs  backend.rs  compiler.rs  executor.rs  format.rs  layout_plan.rs  lib.rs  main.rs  model.rs
tests/e2e/: cli.rs  main.rs
tests/integration/: main.rs  tmux.rs
tests/unit/: differential.rs  main.rs  resolve_vars.rs  shell_quote.rs
