[package]
name = "nix-tmux-define"
version = "0.1.0"
edition = "2021"
description = "Declarative tmux session manager driven by JSON / Home Manager"
license = "MIT"
authors = ["takeokunn"]
repository = "https://github.com/takeokunn/nix-tmux-define"
homepage = "https://github.com/takeokunn/nix-tmux-define"
documentation = "https://docs.rs/nix-tmux-define"
keywords = ["tmux", "nix", "session-manager", "terminal", "dotfiles"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "nix_tmux_define"
path = "src/lib.rs"

[[bin]]
name = "nix-tmux-define"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
toml = "0.8"
serde_yaml = "0.9"
schemars = "0.8"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
